# mandelbrot-visualisation

./: CMakeLists.txt  README.md  run.sh
src/: geometry.cpp  gl_helper.cpp  gl_helper.hpp  main.cpp
src/shaders/: FragmentShader.fs  VertexShader.vs
